--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,10 @@ footer{
     font-size: 15px;
     text-align: center;
     margin-bottom: 20px;
+    position: fixed;
+    right:0;
+    bottom: 0;
+    left: 0;
 
 }
 
@@ -122,7 +126,10 @@ footer{
         font-size: 20px;
         text-align: center;
         margin-bottom: 20px;
-    
+        position: fixed;
+        right:0;
+        bottom: 0;
+        left: 0;
        }
 }
 
